remind_me_server/src/main/java/com/example/global/error/exception/ForbiddenException.java
package com.example.global.error.exception;

import com.example.global.error.ErrorCode;

/**
 * 권한 관련 예외
 */
public class ForbiddenException extends BaseException {
    
    public ForbiddenException(String message) {
        super(ErrorCode.FORBIDDEN, message);
    }
}
